--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "less": "lessc less/freelancer.css css/freelancer.css"
+    "less": "lessc less/freelancer.less css/freelancer.css"
   },
   "repository": {
     "type": "git",
